--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 <h1 style="
 color:white;background-color: rgb(82, 1, 1);
- border: 5px solid dotted white;
+ border: 5px solid dotted rgb(241, 229, 229);
   width: 300px; height: 50px;
   font: size 100px; 
   font-family: Arial, Helvetica, sans-serif;"> ברוכות הבאות לשפיות </h1>
